[package]
name = "js-lite"
version = "0.1.0"
edition = "2021"
description = "Minimal no_std JavaScript interpreter for embedded and bare-metal Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/suhteevah/js-lite"
keywords = ["javascript", "interpreter", "no_std", "embedded", "cloudflare"]
categories = ["no-std", "parser-implementations", "embedded"]
readme = "README.md"

[dependencies]
log = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = []
